--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <p>This is my new LocalRepo</p>
-    <p>This is updated feature branch</p>
+    <p>This is updated feature branch (button)</p>
 </body>
 </html>
